
2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x

==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

* Add support for 'knex' version v1 and v2. ({pull}3355[#3355])
* Add `tedious@16.x` support. ({pull}3366[#3366])

[float]
===== Bug fixes

* Change the "start.js" export to *not* start the APM agent inside a
  https://nodejs.org/api/worker_threads.html[Node.js Worker thread].
+
One way to start the APM agent is via `node -r elastic-apm-node/start.js ...` or
`NODE_OPTIONS='-r elastic-apm-node/start.js`.  When a Node.js Worker thread is
started, it inherits the `process.execArgv` and environment, which results in
"start.js" being run in the context of the new thread. Starting an additional
APM agent in each new Worker is arguably surprising. For now, "start.js" will
avoid starting in a thread. The exact behavior may change in future versions.
+
One undesirable effect of this change is that explicit use of "start.js" in
code (`import 'elastic-apm-node/start.js'` or `require('elastic-apm-node/start.js')`)
in a Worker will *not* start the APM agent. Instead, one must use:
`require('elastic-apm-node').start()` or equivalent.

[float]
===== Chores

* Refactor transport handling to new internal `apm-client` module.
  ({pull}3372[#3372])


[[release-notes-3.46.0]]
==== 3.46.0 - 2023/05/15

[float]
===== Features

* Add support for `@aws-sdk/client-s3`, one of the AWS SDK v3 clients.
  ({pull}3287[#3287])

* Add support for `@apollo/server@4` -- the new Apollo Server package which
  replaces `apollo-server`, `apollo-server-express`, etc. Contributed by
  @jmesimak. ({pull}3203[#3203])

* Add <<capture-body>> support for Fastify instrumentation.
  Contributed by @xxzefgh. ({pull}2681[#2681])

* Add support for mysql2@3. Contributed by @firecow. ({pull}3301[#3301])
