@@ -15,6 +15,11 @@ const REDACTED = require('../constants').REDACTED
  *
  * Express provides multiple body parser middlewares with x-www-form-urlencoded
  * handling.  See http://expressjs.com/en/resources/middleware/body-parser.html
+ *
+ * @param {Object | String} body
+ * @param {Object} requestHeaders
+ * @param {Array<RegExp>} regexes
+ * @returns {Object | String} a copy of the body with the redacted fields
  */
 function redactKeysFromPostedFormVariables (body, requestHeaders, regexes) {
   // only redact from application/x-www-form-urlencoded
@@ -30,31 +35,31 @@ function redactKeysFromPostedFormVariables (body, requestHeaders, regexes) {
   // if body is a string, use querystring to create object,
   // pass to redactKeysFromObject, and reserialize as string
   if (typeof body === 'string') {
-    const objBody = querystring.parse(body)
-    redactKeysFromObject(objBody, regexes)
+    const objBody = redactKeysFromObject(querystring.parse(body), regexes)
     return querystring.stringify(objBody)
   }
 
   return body
 }
 
-function redactKeyFromObject (obj, regex) {
-  for (const [key] of Object.entries(obj)) {
-    if (regex.test(key)) {
-      obj[key] = REDACTED
-    }
-  }
-  return obj
-}
-
+/**
+ * Returns a copy of the provided object. Each entry of the copy will have
+ * its value REDACTEd if the key matches any of the regexes
+ *
+ * @param {Object} obj The source object be copied with redacted fields
+ * @param {Array<RegExp>} regexes RegExps to check if the entry value needd to be redacted
+ * @returns {Object} Copy of the source object with REDACTED entries or the original if falsy or regexes is not an array
+ */
 function redactKeysFromObject (obj, regexes) {
   if (!obj || !Array.isArray(regexes)) {
     return obj
   }
-  for (const [, regex] of regexes.entries()) {
-    redactKeyFromObject(obj, regex)
+  const result = {}
+  for (const key of Object.keys(obj)) {
+    const shouldRedact = regexes.some((regex) => regex.test(key))
+    result[key] = shouldRedact ? REDACTED : obj[key]
   }
-  return obj
+  return result
 }
 
 module.exports = {
