@@ -21,20 +21,25 @@ test('redactKeysFromObject tests', function (t) {
     three: 'four',
     five: 'six'
   }
-  redactKeysFromObject(obj1, [/th.*ee/])
-  t.equals(obj1.three, '[REDACTED]', 'key three redacted')
-  t.equals(obj1.one, 'two', 'key one remains in ibject')
-  t.equals(obj1.five, 'six', 'key five remains in object')
+  const redactedObj1 = redactKeysFromObject(obj1, [/th.*ee/])
+  t.equals(redactedObj1.three, '[REDACTED]', 'key three redacted')
+  t.equals(redactedObj1.one, 'two', 'key one remains in ibject')
+  t.equals(redactedObj1.five, 'six', 'key five remains in object')
+  t.ok(obj1 !== redactedObj1, 'redacted object is a copy')
+  t.equals(obj1.three, 'four', 'original object is not redacted')
 
   const obj2 = {
     one: 'two',
     three: 'four',
     five: 'six'
   }
-  redactKeysFromObject(obj2, [/th.*ee/, /three/, /.*five/])
-  t.equals(obj2.three, '[REDACTED]', 'key three redacted')
-  t.equals(obj2.one, 'two', 'key one remains in ibject')
-  t.equals(obj2.five, '[REDACTED]', 'key five redacted')
+  const redactedObj2 = redactKeysFromObject(obj2, [/th.*ee/, /three/, /.*five/])
+  t.equals(redactedObj2.three, '[REDACTED]', 'key three redacted')
+  t.equals(redactedObj2.one, 'two', 'key one remains in ibject')
+  t.equals(redactedObj2.five, '[REDACTED]', 'key five redacted')
+  t.ok(obj2 !== redactedObj2, 'redacted object is a copy')
+  t.equals(obj2.three, 'four', 'original object is not redacted')
+  t.equals(obj2.five, 'six', 'original object is not redacted')
 
   t.end()
 })
